--- a/public/assets/OwlCarousel/docs_src/assets/scss/_settings.scss
+++ b/public/assets/OwlCarousel/docs_src/assets/scss/_settings.scss
@@ -108,7 +108,7 @@ $alert-color: #f04124;
 // $cursor-crosshair-value: crosshair;
 // $cursor-default-value: default;
 // $cursor-pointer-value: pointer;
-// $cursor-help-value: help;
+// $cursor-helps.blade.php-value: helps.blade.php;
 // $cursor-text-value: text;
 
 //
@@ -1145,7 +1145,7 @@ $side-nav-font-size: rem-calc(16);
 // $has-tip-font-color: #333;
 // $has-tip-border-bottom-hover: dotted 1px scale-color($primary-color, $lightness: -55%);
 // $has-tip-font-color-hover: $primary-color;
-// $has-tip-cursor-type: help;
+// $has-tip-cursor-type: helps.blade.php;
 
 // $tooltip-padding: rem-calc(12);
 // $tooltip-bg: #333;
