--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,40 +4,127 @@
 .collapse.navbar-collapse {
     visibility: unset;
 }
+
+.white-btn{
+    color: var(--dark);
+    background-color: var(--white);
+}
+
+.white-btn:hover{
+    color: var(--white);
+    background-color: var(--dark);
+}
+
+.section-header {
+    text-align: center;
+    margin-top: 2rem;
+    font-weight: 800;
+    @apply text-3xl;
+}
+
+li.Footer__country-flags-list-item {
+    margin-right: 5px;
+    display: block;
+    margin-bottom: 5px;
+    overflow: hidden;
+    line-height: .5rem;
+}
+li.Footer__country-flags-list-item a{
+    width: 39px;
+    display: block;
+}
+/*.primary-btn{*/
+/*    text-decoration: none;*/
+/*    padding: .5rem 2.5rem;*/
+/*    font-size: 1rem;*/
+/*    line-height: 1.5rem;*/
+/*    font-weight: 600;*/
+/*    border-radius: 0.125rem;*/
+/*    text-transform: uppercase;*/
+/*    @apply mr-4;*/
+/*    @apply bg-slate-200;*/
+/*    @apply transition;*/
+/*    @apply duration-200;*/
+/*    @apply text-slate-900;*/
+/*    @apply hover:bg-slate-900;*/
+/*    @apply hover:text-slate-100;*/
+/*}*/
+
+/*.tab-button{*/
+/*    padding: .5rem 1rem;*/
+/*    position: relative;*/
+/*    margin: 0rem 2rem;*/
+/*    @apply text-slate-900;*/
+/*    @apply text-base;*/
+/*    @apply font-semibold;*/
+/*    @apply hover:after:bg-slate-900;*/
+/*}*/
+/*.tab-button:after{*/
+/*    content: '';*/
+/*    height: 2px;*/
+/*    background: transparent;*/
+/*    width: 100%;*/
+/*    position: absolute;*/
+/*    bottom: -4%;*/
+/*    left: 0;*/
+/*    @apply transition;*/
+/*    @apply duration-300;*/
+/*}*/
+.bg-nav{
+    background-color: var(--nav_color);
+}
 .primary-btn{
     text-decoration: none;
-    padding: .5rem 2.5rem;
+    padding: .7rem 2.5rem;
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: 600;
-    border-radius: 0.125rem;
+    border-radius: 0.15rem;
     text-transform: uppercase;
-    @apply mr-4;
-    @apply bg-slate-200;
-    @apply transition;
-    @apply duration-200;
-    @apply text-slate-900;
-    @apply hover:bg-slate-900;
-    @apply hover:text-slate-100;
+    transition: .3s ease;
+    @apply text-sm;
+    @apply sm:text-base;
 }
 
-.tab-button{
-    padding: .5rem 1rem;
-    position: relative;
-    margin: 0rem 2rem;
-    @apply text-slate-900;
-    @apply text-base;
-    @apply font-semibold;
-    @apply hover:after:bg-slate-900;
+.btn-bordered{
+    @apply border-slate-900;
+    @apply border-2;
 }
-.tab-button:after{
-    content: '';
-    height: 2px;
-    background: transparent;
-    width: 100%;
+
+.cart-btn{
+    @apply primary-btn;
+    @apply btn-bordered;
+    @apply white-btn;
+    padding: .5rem 0;
+    margin-bottom: .9rem;
+}
+
+.body-overly{
+    @apply fixed;
+    @apply inset-0;
+    @apply bg-slate-900;
+    @apply opacity-70;
+    z-index: 1;
+}
+
+.cart-header{
+    @apply relative;
+}
+
+.shopping_cart{
+    @apply  transition-all;
+    @apply  duration-500;
+    right: -100%;
+    @apply ease-in-out;
+}
+
+.shopping_cart.active{
+    right: 0;
+}
+
+button.cart-close {
+    font-size: 2rem;
     position: absolute;
-    bottom: -4%;
-    left: 0;
-    @apply transition;
-    @apply duration-300;
+    top: -39px;
+    left: -33px;
 }
