--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,18 @@
     visibility: unset;
 }
 
+.dark-btn{
+    color: var(--white);
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+}
+.dark-btn:hover{
+    color: var(--primary-color);
+    background-color: var(--white);
+    border: 2px solid var(--primary-color);
+}
+
+
 .white-btn{
     color: var(--dark);
     background-color: var(--white);
@@ -161,16 +173,39 @@ button.cart-close {
     position: relative;
     height: calc(100vh - 110px);
     z-index: 1;
-    background-position: 100% 76%;
+    background-position: center;
+    background-size: contain;
 }
 section.banner-overly:after {
     content: '';
     background: #464646;
-    opacity: .55;
+    opacity: .4;
     position: absolute;
     top: 0;
     width: 100%;
     height: 100%;
     left: 0;
     z-index: -1;
+}
+@media (min-width: 768px) {
+    .products .col-md-2 {
+        max-width: 18%;
+    }
+}
+.announcement{
+    background-color: var(--primary-color);
+}
+.company-banner h1 {
+    text-shadow: 1px 2px 3px #00000063;
+    transform: rotateZ(-12deg);
+}
+
+.about-service{
+    background-color: #eeebe5;
+}
+.bi-check2-all{
+    @apply text-green-500;
+}
+.help{
+    @apply text-green-500;
 }
